--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+main {
+  background-image: url("images/bg-v1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
